--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,51 +1,108 @@
-.header{
+.navbar {
+    background: #fff;
     height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
     position: sticky;
     top: 0;
     z-index: 999;
-    background-color:#fff;
-    font-size: 1.2rem;
-}
-
-.header__main{
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0 0 0 ;
-}
-
-.scroll{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.header__logo{
-    font-weight: 600;
-    color: #eb0028;
-}
-
-.header__menu{
-    display: flex;
-}
-
-.header__menu-list{
-    display: flex;
-    align-items: center;
-    list-style: none;
     
 }
 
-.header__menu-item{
-    padding: 0 12px;
+.scroll{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.logo-image{
-    width:100px;
-    height:30px;
+.navbar-container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
 }
 
+.container {
+    z-index: 1;
+    width: 100%;
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
 
-.cart-icon{
-    font-size: 1.2rem;
+.navbar-logo {
+        /* justify-self: start; */
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.navbar-logo__image{
+    width: 50px;
+    height: 50px;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;    
+    list-style: none;
+    /* text-align: center; */
+    justify-content: center;
+}
+
+.nav-item {
+    padding: 0 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.menu-icon {
+    display: none;
+}
+
+@media screen and (max-width:960px){
+    .nav-menu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 90vh;
+        position: absolute;
+        top: 80px;
+        left: -100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        
+    }
+    .nav-menu.active {
+        background: #999;
+        left: 0;
+        opacity: 1;
+        transition: all 0.6s ease;
+        z-index: 1;
+    }
+    .nav-item {
+        width: 100%;
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+        font-size: 2rem;
+    }
+    .navbar-logo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(25%, 50%);
+    }
+
+    .menu-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 60%);
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
 }
