--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -1,13 +1,13 @@
 .info__wrapper{
-    width: 100%;
+    width: 50%;
     height: 300px;
     display: flex;
+    flex:1;
     background-color: #fff;
     align-items: center;
-    justify-content:center;
-    /* box-shadow: 0 0 3px rgba(0, 0, 0,.5); */
-    padding: 20px 0 ;
+    justify-content:center;  
     border-radius: 3px;
+    /* box-shadow: 0 0 3px rgba(0,0,0,.5); */
 }
 
 .info__image-img{
@@ -19,7 +19,7 @@
 
 .info__text{
     display: flex;
-    width:200px;
+    width:250px;
     flex-direction: column;
     text-align: center;
 }
