--- a/src/components/slide/slide.css
+++ b/src/components/slide/slide.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    width: 100%;
   }
   
   .image {
@@ -38,12 +39,12 @@
   
   .slide {
     opacity: 0;
-    transition-duration: 1s ease;
+    transition-duration: 2s ease-out;
   }
 
   
   .slide.active {
     opacity: 1;
-    transition-duration: 1s;
+    transition-duration: 2s;
     transform: scale(1.08);
   }
