--- a/src/pages/Details/details.css
+++ b/src/pages/Details/details.css
@@ -1,4 +1,4 @@
-.home{
+.details{
     width: 100%;
     margin: 30px 0;
 }
@@ -10,7 +10,6 @@
   
 }
 
-.home__row{
+.details__row{
   align-items: center;
 }
-
