--- a/src/components/loginform/login.css
+++ b/src/components/loginform/login.css
@@ -6,7 +6,7 @@
 }
 
 .login-text{
-    color: #eb0028;
+    color: #333;
     display:inline-flex;
     margin-left: 40px; 
     padding: 20px 0 12px 0;   
@@ -14,7 +14,14 @@
 
 .login-text-none{
     margin-left: 40px; 
-    padding: 12px 0;   
+    padding: 12px 0; 
+}
+
+.login-text-none:first-child{
+  font-family:monospace;
+  font-size: 1.4rem;
+  color: #eb0028;
+  text-decoration: underline;  
 }
 
 .heading{
@@ -28,7 +35,7 @@
   /* align-items: center; */
   justify-content: center;
   width: 400px;
-  height: 400px;
+  /* height: 400px; */
   flex-wrap: wrap;
   box-shadow: 0 0 8px rgba(0, 0, 0, 1);
   border-radius: 4px;
