--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -6,7 +6,8 @@
   background-color:#fff;
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 220px;
+  /* height: 327px; */
 }
 
 .product-image__img {
