--- a/src/components/comment/comment.css
+++ b/src/components/comment/comment.css
@@ -1,8 +1,7 @@
 .comment{
     padding: 0;
     border-radius:8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,.8);
-    margin:0 12px;
+    margin:12px;
     display: flex;
     flex-direction: column;
     width: 300px;
@@ -13,6 +12,7 @@
     width: 100%;
     height: 200px;
     padding: 8px;
+    border-radius:16px;
 }
 
 .comment-text,
