--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content:center;  
     border-radius: 3px;
+    color: #333;
     /* box-shadow: 0 0 3px rgba(0,0,0,.5); */
 }
 
@@ -34,4 +35,9 @@
     font-size: 2rem;
     font-weight: 600;
     padding: 0 0 12px 0 ;
+}
+
+
+@media screen and (max-width:960px){
+    
 }
