--- a/src/components/introduce/introduce.css
+++ b/src/components/introduce/introduce.css
@@ -21,7 +21,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 200px;
+  /* padding: 0 200px; */
+  width: 100%;
 }
 
 .introduce-company__logo {
@@ -55,9 +56,19 @@
   user-select: none;
 }
 
-
-.introduce-company.introduce-company__active{
+.introduce-company.introduce-company__active {
   opacity: 1;
-    transition-duration: 1s;
-    transform: scale(1.08);
+  /* transition-duration: 1s; */
+  /* transform: scale(1.08); */
+  width: 70%;
+}
+
+
+@media  screen and (max-width:960px){
+  .introduce-company__text {
+    height:200px;
+    overflow-y: hidden;
+    text-align: justify;
+    overflow-x: hidden;
+  }
 }
