--- a/src/components/rangebar/rangebar.css
+++ b/src/components/rangebar/rangebar.css
@@ -1,10 +1,11 @@
 .range-bar{
     height:60px;
-    background-image: linear-gradient(#7c0715,#eb0028);
+    background-image: linear-gradient(#eb0028,#cd342e);
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
     box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.5);
     font-size:1.2rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .range-bar-text{
