--- a/src/components/main/info/info.css
+++ b/src/components/main/info/info.css
@@ -1,6 +1,6 @@
 .info__wrapper{
     width: 600px;
-    height: 300px;
+    height: 200px;
     display: flex;
     flex:1;
     background-color: #fff;
@@ -8,6 +8,7 @@
     justify-content:center;  
     border-radius: 3px;
     color: #333;
+    margin: 12px 0;
     /* box-shadow: 0 0 3px rgba(0,0,0,.5); */
 }
 
