--- a/src/pages/Details/details.css
+++ b/src/pages/Details/details.css
@@ -1,6 +1,13 @@
 .details{
     width: 100%;
-    margin: 30px 0;
+    margin-bottom: 30px;
+}
+
+.details-section {
+  width: 100%;
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .row{
