--- a/src/components/main/comment/comment.css
+++ b/src/components/main/comment/comment.css
@@ -8,6 +8,12 @@
     
 }
 
+@media screen and (max-width:960px){
+    .comment{
+        width: 100%;
+    }
+}
+
 .comment-image__img{
     width: 100%;
     height: 200px;
