--- a/src/components/main/introducetop/introducetop.css
+++ b/src/components/main/introducetop/introducetop.css
@@ -1,63 +1,68 @@
 .introduce-top-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+@media  screen and (max-width:960px){
+  .introduce-top-wrapper{
+    max-height: 250px;
   }
-  
+}
+
+.introduce-top-image {
+  width: 100%;
+  height: 545px;
+}
+
+.introduce-top-text {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  text-align: center;
+  z-index: 1;
+  color: #333;
+}
+
+.introduce-top-text__justify {
+  font-size: 1rem;
+  padding: 24px 0;
+}
+
+.introduce-top-text__link {
+  color: #eb0028;
+  font-size: 1.4rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.introduce-top-text__link:hover {
+  opacity: 0.5;
+}
+
+@media screen and (max-width: 960px) {
   .introduce-top-image {
-    width: 100%;
-    height:545px;
-  }
-  
-  .introduce-top-text{
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      text-align:center;
-      z-index: 1;
-      color: #333;
+    object-fit: contain;
   }
 
-  .introduce-top-text__justify{
-      font-size: 1rem;
-      padding:24px 0;
+  .introduce-top-text__justify {
+    display: none;
   }
-
-  .introduce-top-text__link{
-    color:#eb0028;
-    font-size:1.4rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    text-decoration: underline;
-  }
-
-  .introduce-top-text__link:hover{
-    opacity: 0.5;
-  }
-  
-
-  @media screen and (max-width:960px){
-    .introduce-top-image {
-      object-fit: contain;
-    }
-
-    .introduce-top-text__justify{
-      display: none;
-  }
-  .introduce-top-text__title{
+  .introduce-top-text__title {
     width: 100%;
     overflow: hidden;
     display: block;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
-}
   }
+}
