--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   color: #eb0028;
   outline: none;
   border: 1px solid #eb0028;
-  width: 150px;
+  min-width: 150px;
   /* padding: 0 12px; */
   height: 30px;
   margin: 10px auto;
@@ -50,4 +50,12 @@
   color: #fff;
   border: none;
   cursor: pointer;
+}
+
+
+@media screen  and (max-width:960px) {
+  .btn{
+    width: 80%;
+    height: 40px;
+  }
 }
