--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -10,9 +10,10 @@
   color: #333;
 }
 
-@media screen and (max-width:960px){
+@media screen and (max-width:768px) {
   .product{
     width: 100%;
+    box-shadow: none;
   }
 }
 
