--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     color: #333;
+    
 }
 
 .check__form-title, .check__method-title{
@@ -37,7 +38,13 @@
     color:#eb0028;
 }
 
+.form-section{
+    width: 100%;
+    
+}
+
 .form-block{
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin: 12px 0;
