fix location url

--- a/src/components/bar/locationbar/locationbar.css
+++ b/src/components/bar/locationbar/locationbar.css
@@ -16,6 +16,8 @@
     padding: 0 4px;
     display: flex;
     align-items: center;
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .location-bar-item:first-child{
