--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -101,4 +101,11 @@
         width: 80px;
         height: 80px;
     }
+    .cart__shipping{
+      padding:0 12px;
+    }
+
+    .cart__shipping-select{
+      padding:0 12px;
+    }
 }
