--- a/src/pages/ProductDetails/productdetails.css
+++ b/src/pages/ProductDetails/productdetails.css
@@ -39,7 +39,8 @@
 
 .product-details-image__right-item {
   position: relative;
-  width: 80%;
+  width: 100%;
+  height: 300px;
 }
 
 .product-details-image__left-item {
@@ -149,7 +150,7 @@ p {
 .product-details-push-right {
   position: absolute;
   top: 285px;
-  left: 560px;
+  left: 616px;
   font-size: 3rem;
   color: rgba(150, 150, 150, 0.8);
   z-index: 10;
