--- a/src/components/bar/brandbar/brandbar.css
+++ b/src/components/bar/brandbar/brandbar.css
@@ -15,8 +15,7 @@
 
 @media screen and (max-width:960px){
     .brand-bar{
-        height:80px;
-        margin-top: 20px;
+       display: none;
     }
 }
 
