update css details page

--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -10,12 +10,12 @@
   margin-left: auto;
 }
 
-.row {
+/* .row {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 12px 0;
-}
+} */
 
 .cart__row {
   align-items: center;
