--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  margin: 12px 0 ;
+  
+}
 
 .link{
   color: #333;
