--- a/src/components/bar/rangebar/rangebar.css
+++ b/src/components/bar/rangebar/rangebar.css
@@ -1,43 +1,76 @@
-.range-bar{
-    height:60px;
-    background-image: linear-gradient(#eb0028,#cd342e);
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
-    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.5);
-    font-size:1.2rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.range-bar {
+  height: 60px;
+  /* background-image: linear-gradient(#eb0028,#cd342e); */
+  font-size: 1.2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.range-bar-text{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
+.range-bar-container {
+  padding-top: 10px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.range-bar-text-list{
-    display: flex;
-    list-style: none;
-    padding: 16px 0;
+.range-bar__form {
+  display: flex;
+  align-items: center;
 }
 
-.range-bar-text-item{
-    padding: 0 12px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    color: #f1f1f1;   
+.range-bar__form-input {
+  color: rgba(0, 0, 0, 0.85);
+  width: 80%;
+  height: 37px;
+  margin-left: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  outline: none;
+  border-right: none;
+  padding: 0 8px;
 }
 
-.range-bar-text-item:hover{
-    opacity: 0.5;
+.range-bar__form-submit {
+  width: 30px;
+  height: 37px;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
-.range-bar-text-item:first-child{
-    color: #f1f1f1;    
-    font-weight: 600;
+.range-bar__select {
+  width: 150px;
+  height: 37px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  cursor: pointer;
 }
 
-.range-bar-icon{
-    color: rgba(0, 0, 0, 0.2);
+.range-bar__form-input:hover,
+.range-bar__form-submit:hover,
+.range-bar__select:hover {
+  border-color: #eb0028;
+}
+
+.range-bar-text-item {
+  padding: 0 12px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  color: #f1f1f1;
+}
+
+.range-bar-icon {
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.range-bar-icon:nth-child(2){
+    color:#eb0028;
+    width: 37px;
+    height: 37px;
+    padding: 0 4px;
 }
