--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -10,13 +10,13 @@
     margin-left: auto;
 }
 
-.row{
+/* .row{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   margin: 12px 0 ;
   
-}
+} */
 
 .check__row{
   align-items: center;
