--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -8,11 +8,11 @@
     margin-right: auto;
     margin-left: auto;
 }
-.row{
+/* .row{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;  
-}
+} */
 
 .home__row{
   align-items: center;
