--- a/src/pages/ProductDetails/productdetails.css
+++ b/src/pages/ProductDetails/productdetails.css
@@ -10,11 +10,11 @@
   margin-left: auto;
 }
 
-.row {
+/* .row {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
+} */
 
 .product-details__row {
   align-items: center;
