--- a/src/components/bar/rangebar/rangebar.css
+++ b/src/components/bar/rangebar/rangebar.css
@@ -42,12 +42,42 @@
 }
 
 .range-bar__select {
+  color: #333;
   width: 150px;
   height: 37px;
-
+  position: relative;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.45);
   cursor: pointer;
+  padding: 4px 0 0 10px;
+}
+
+.range-bar__select-children {
+  position: absolute;
+  width: 150px;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  z-index: 10;
+  top: 110%;
+  border-radius: 4px;
+  background-color: #fff;
+  display: none;
+  left: 0;
+  padding: 4px 0 0 10px;
+}
+
+.range-bar__select-children::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: -15px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background-color: transparent;
+}
+
+.range-bar__select:hover .range-bar__select-children {
+  display: block;
 }
 
 .range-bar__form-input:hover,
@@ -68,9 +98,8 @@
   color: rgba(0, 0, 0, 0.2);
 }
 
-.range-bar-icon:nth-child(2){
-    color:#eb0028;
-    width: 37px;
-    height: 37px;
-    padding: 0 4px;
+.range-bar-icon:nth-child(2) {
+  color: #eb0028;
+  font-size: 1.8rem;
+  padding: 0 4px;
 }
