--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,125 +1,157 @@
 .navbar {
-    background: #fff;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-    
+  background: #fff;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
-.scroll{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+.scroll {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
 }
 
 .container {
-    z-index: 1;
-    width: 100%;
-    max-width: 1200px;
-    margin-right: auto;
-    margin-left: auto;
-    
+  z-index: 1;
+  width: 100%;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .navbar-logo {
-        /* justify-self: start; */
-    cursor: pointer;
-    display: flex;
-    align-items: center;
+  /* justify-self: start; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
-.navbar-logo__image{
-    width: 50px;
-    height: 50px;
-    border-radius:4px;
+.navbar-logo__image {
+  width: 50px;
+  height: 50px;
+  border-radius: 4px;
 }
 
 .nav-menu {
-    display: flex;
-    align-items: center;    
-    list-style: none;
-    /* text-align: center; */
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  /* text-align: center; */
+  justify-content: center;
 }
 
 .nav-item {
-    padding: 0 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.nav-item__border{
-    border-bottom: 2px solid #eb0028;
+.nav-item__border {
+  border-bottom: 2px solid #eb0028;
 }
 
-.nav-item:hover{
-    border-bottom: 2px solid #eb0028;
+
+.none-border:hover {
+    border-bottom: none;
+  }
+.nav-item:hover {
+  border-bottom: 2px solid #eb0028;
 }
 
 .menu-icon {
-    display: none;
+  display: none;
 }
 
-@media screen and (max-width:960px){
-    .nav-menu {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 90vh;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-        
-    }
-    .nav-menu.active {
-        background: #fff;
-        left: 0;
-        opacity: 1;
-        transition: all 0.6s ease;
-        z-index: 1;
-    }
-    .nav-item {
-        width: 100%;
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
-        font-size: 2rem;
-    }
+.nav-bar__form {
+  display: flex;
+  align-items: center;
+}
 
-    .nav-item:hover{
-        border:none;
-    }
-    .navbar-logo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 20%);
-    }
+.nav-bar__form-input {
+  color: rgba(0, 0, 0, 0.85);
+  width: 80%;
+  height: 37px;
+  margin-left: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  outline: none;
+  border-right: none;
+  padding: 0 8px;
+}
 
-    .menu-icon {
-        display: flex;
-        position: absolute;
-        top: 0;
-        right: -130px;
-        transform: translate(-100%, 60%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-    .menu-icon__item{
-        padding: 0 8px;
-    }
-    
+.nav-bar__form-submit {
+  width: 30px;
+  height: 37px;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.nav-bar__form-input:hover,
+.nav-bar__form-submit:hover {
+  border-color: #eb0028;
+}
+
+@media screen and (max-width: 960px) {
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+  .nav-menu.active {
+    background: #fff;
+    left: 0;
+    opacity: 1;
+    transition: all 0.6s ease;
+    z-index: 1;
+  }
+  .nav-item {
+    width: 100%;
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+    font-size: 2rem;
+  }
+
+  .nav-item:hover {
+    border: none;
+  }
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 20%);
+  }
+
+  .menu-icon {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: -130px;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+  .menu-icon__item {
+    padding: 0 8px;
+  }
 }
