--- a/src/components/auth/registerform/register.css
+++ b/src/components/auth/registerform/register.css
@@ -52,6 +52,17 @@
   .register-btn{
     margin-top:12px;
   }
+
+  .register-validate {
+    display: none;
+    margin: 0 auto;
+    height: 30px;
+    width:80%;
+    align-items: center;
+    color:#eb0028;
+    background-color: rgba(255, 0, 0, 0.3);
+    
+  }
   
 
   @media screen and (max-width:960px){
