--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,7 +52,7 @@
 .nav-item {
   padding: 0 10px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
