--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -2,11 +2,12 @@ table {
   width: 100%;
   min-width: 400px;
   border-spacing: 0;
+  
 }
 
 thead {
   height: 40px;
-  background-color: rgba(255, 0, 0, 0.45);
+  background-color: #f1f1f1;
 }
 
 tr {
@@ -14,7 +15,16 @@ tr {
   text-align: left;
 }
 
+tr:nth-child(even){
+  background-color: #f1f1f1;
+}
+
 tr:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
   cursor: pointer;
+}
+
+.table__image{
+  width: 80px;
+  height: 100px;
 }
