--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -17,6 +17,8 @@
 .admin__row {
   /* align-items: center; */
   display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
 }
 
 .admin__col-6 {
@@ -30,22 +32,45 @@
 }
 
 .admin__item-sm {
-  width: 300px;
-  height: 180px;
+  width: 340px;
+  /* height: 180px; */
   margin: 10px;
   border-radius: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.45);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
 }
 
 .admin__item-lg {
   width: 100%;
-  height: 377px;
-  overflow:scroll;
-  /* scrollbar-color: rgba(255, 0, 0, 0.8); */
-  overflow-x: hidden;
+  height: 480px;
+  overflow: hidden;
   margin: 10px 0 0 10px;
   padding: 10px;
   border-radius: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.45);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
 }
 
+.admin__item-lg:hover {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.admin__item-lg::-webkit-scrollbar {
+  width: 10px;
+}
+
+.admin__item-lg::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 30px;
+}
+
+.admin__item-lg::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+}
+
+.admin__title {
+  font-family: monospace;
+  font-size: 1.4rem;
+  color: #eb0028;
+  text-decoration: underline;
+}
