add tableOrder,fetch data and custom admin,edit authentication

--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -9,3 +9,11 @@
   width: 100%;
   height: 120px;
 }
+
+
+.chart__title {
+  font-family: monospace;
+  font-size: 1.4rem;
+  /* color: #eb0028; */
+  text-decoration: underline;
+}
