--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -74,3 +74,10 @@
   color: #eb0028;
   text-decoration: underline;
 }
+
+.admin__header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
