--- a/src/components/main/comment/comment.css
+++ b/src/components/main/comment/comment.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 275px;
-    
+    box-shadow:  0 4px 8px rgba(0,0,0,.45);
 }
 
 @media screen and (max-width:960px){
