--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -1,5 +1,6 @@
 .cart {
   width: 100%;
+  min-height:500px;
   margin-bottom: 30px;
 }
 
@@ -67,6 +68,10 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  border: 3px solid #eb0028;
+  border-radius: 6px;
+  padding:10px;
+  cursor: pointer;
 }
 
 .cart__total-title {
@@ -83,6 +88,7 @@
 
 .cart__total-item {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 8px 0;
 }
