--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -36,6 +36,12 @@
   text-decoration: none;
 }
 
+.profile__header{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
 .profile__order:hover {
   /* background-color: rgba(255, 0, 0, 0.25); */
   animation-name: example;
