--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,11 +2,11 @@
   background-color: #1c2237;
   color: #fff;
   padding: 10px 0;
-  border-top:4px solid #eb0028;
+  border-top: 4px solid #eb0028;
   display: flex;
   flex-direction: column;
-  align-items: center;justify-content:center;
- 
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-first-content {
@@ -45,7 +45,6 @@
   padding: 0 8px;
 }
 
-
 /* Main content */
 .footer-links {
   width: 100%;
@@ -72,7 +71,7 @@
   margin-bottom: 16px;
 }
 
-.footer-link-items>h2 {
+.footer-link-items > h2 {
   color: #fff;
 }
 
@@ -89,16 +88,13 @@
   align-items: center;
   width: 100%;
   margin: 0 auto;
-
 }
-
 
 .footer-end-content-social {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-
 
 .footer-end-content-social-item {
   padding: 12px 4px;
@@ -109,26 +105,25 @@
   cursor: pointer;
 }
 
-@media screen and (max-width:768px) {
-    .footer-search-content-text{
-      display:none;
-    }
-    .footer-search-content-form{
-      display: flex;
-      flex-direction: column;
-    }
-
-    .footer-main-content{
-      display: flex;
-      flex-direction: column;
-    }
-    
-
-    .footer-link-wrapper {
-      flex-direction: column;
+@media screen and (max-width: 768px) {
+  .footer-search-content-text {
+    display: none;
+  }
+  .footer-search-content-form {
+    display: flex;
+    flex-direction: column;
   }
 
-  .footer-end-content{
+  .footer-main-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-link-wrapper {
+    flex-direction: column;
+  }
+
+  .footer-end-content {
     flex-direction: column;
   }
 }
