--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -15,12 +15,14 @@
   top: 50%;
   left: 50%;
   margin: 0 auto;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0,.65);
-  border-radius:8px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.65);
+  border-radius: 8px;
 }
 
 .display-block {
   display: block;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .display-none {
@@ -33,4 +35,18 @@
   float: right;
   color: #eb0028;
   cursor: pointer;
+}
+
+.modal::-webkit-scrollbar {
+  width: 10px;
+}
+
+.modal::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 30px;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
 }
