--- a/src/pages/OrderDetails/orderdetails.css
+++ b/src/pages/OrderDetails/orderdetails.css
@@ -43,7 +43,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #eb0028;
+  background-color: rgba(235, 0, 40, 0.66);
   color: #fff;
   text-align: center;
 }
@@ -53,7 +53,7 @@
   height: 60px;
   border-radius: 50%;
   background-color: #fff;
-  color:#eb0028;
+  color: rgba(235, 0, 40,0.66);
   text-align: center;
 }
 
@@ -63,20 +63,18 @@
   border-radius: 50%;
   border: 1px dashed #eb0028;
   background-color: #fff;
-  color:#eb0028;
+  color: #eb0028;
   text-align: center;
 }
 
-.circle-status-icon{
-  margin-top:20px;
+.circle-status-icon {
+  margin-top: 20px;
   font-size: 1.5rem;
   font-weight: 700;
 }
 
-.circle-status-icon-arrow{
-  margin-top:20px;
+.circle-status-icon-arrow {
+  margin-top: 20px;
   font-size: 1.5rem;
   font-weight: 700;
-  
 }
-
