--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -88,6 +88,19 @@
   border-right: none;
   padding: 0 8px;
 }
+.nav-bar__form-input-admin {
+  color: rgba(0, 0, 0, 0.85);
+  width: 50%;
+  height: 37px;
+  margin: 5px 0;
+  border: 1px solid rgba(0, 0, 0, 0.45);
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  outline: none;
+  padding:  0 8px;
+}
 
 .nav-bar__form-submit {
   width: 30px;
