--- a/src/components/bar/pagination/pagination.css
+++ b/src/components/bar/pagination/pagination.css
@@ -7,6 +7,7 @@
 }
 .pagination-item {
   width: 30px;
+  height: 20px;
   display: flex;
   text-align: center;
   border-radius: 4px;
@@ -15,7 +16,6 @@
   border: 1px solid #eb0028;
   margin: 0 8px;
 }
-
 
 .pagination-link {
   width: 100%;
