--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -102,6 +102,18 @@
   font-weight: 600;
 }
 
+.cart-empty-wrapper {
+  width: 100%;
+  height: 450px;
+  text-align: center;
+}
+
+.cart-empty {
+  color: #eb0028;
+  font-family: monospace;
+  margin-top:50px;
+}
+
 @media screen and (max-width: 960px) {
   .cart__img {
     width: 80px;
