--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,7 +52,7 @@
 .nav-item {
   padding: 0 10px;
   display: flex;
-  /* align-items: center; */
+  cursor: pointer;
   justify-content: center;
 }
 
@@ -99,7 +99,7 @@
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   outline: none;
-  padding:  0 8px;
+  padding: 0 8px;
 }
 
 .nav-bar__form-submit {
