--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  height:300px;
   border-radius: 6px;
   padding: 10px;
   cursor: pointer;
