--- a/src/components/auth/registerform/register.css
+++ b/src/components/auth/registerform/register.css
@@ -64,6 +64,33 @@
   background-color: rgba(255, 0, 0, 0.3);
 }
 
+.register-password-wrapper {
+  margin: 0 auto;
+  width: 80%;
+  position: relative;
+}
+
+.register-password-input{
+  width: 100%;
+  height: 40px;
+  outline: none;
+  margin: 0 auto;
+}
+
+.register-password-icon{
+  position: absolute;
+  top: 28%;
+  right: 6%;
+  font-size:1.2rem;
+  color: #eb0028;
+  cursor: pointer;
+}
+
+.register-password-icon:hover{
+  opacity: 0.5;
+}
+
+
 @media screen and (max-width: 960px) {
   .register-form {
     box-shadow: none;
