--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@
   /* padding: 0 12px; */
   height: 30px;
   margin: 10px auto;
+  box-shadow: inset 0 0 0 0 #eb0028;
+  -webkit-transition: ease-out 0.6s;
+  -moz-transition: ease-out 0.6s;
+  transition: ease-out 0.6s;
 }
 
 .btn:hover {
@@ -57,7 +61,10 @@
   color: #fff;
   border: none;
   cursor: pointer;
+  box-shadow: inset 400px 50px 0 0 #eb0028;
 }
+
+
 
 @media screen and (max-width: 960px) {
   .btn {
