--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,18 @@
   box-shadow: inset 400px 50px 0 0 #eb0028;
 }
 
-
+.title__tag {
+  height: 30px;
+  width: 250px;
+  background-image: linear-gradient(to right, #b11224, #eb0028);
+  color: #fff;
+  font-family: monospace;
+  font-size: 1rem;
+  padding: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media screen and (max-width: 960px) {
   .btn {
