--- a/src/pages/ProductDetails/productdetails.css
+++ b/src/pages/ProductDetails/productdetails.css
@@ -120,7 +120,7 @@ p {
 /* Content */
 
 .product-details-posts {
-  width: 900px;
+  width: 75%;
   display: flex;
   flex-direction: column;
   color: #333;
@@ -129,7 +129,7 @@ p {
 
 .product-details-specifications {
   padding: 12px;
-  width: 300px;
+  width: 25%;
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
