--- a/src/components/main/comment/comment.css
+++ b/src/components/main/comment/comment.css
@@ -47,5 +47,13 @@
 }
 
 .comment-link__text {
+  color: #eb0028;
+  font-size: 1.2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-decoration: none;
   padding: 0 8px;
 }
