--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -56,6 +56,7 @@
   display: flex;
   flex-direction: column;
   margin: 12px 0;
+  padding:0 12px;
 }
 
 .form-flex {
@@ -66,12 +67,12 @@
 
 .form-input {
   height: 40px;
-  width: 80%;
+  width: 100%;
 }
 
 textarea {
   height: 200px;
-  width: 80%;
+  width: 100%;
 }
 
 /* Right */
