--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 960px) {
