--- a/src/components/auth/loginform/login.css
+++ b/src/components/auth/loginform/login.css
@@ -58,6 +58,7 @@
   align-items: center;
   color: #eb0028;
   background-color: rgba(255, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .login-password-wrapper {
