--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -27,8 +27,19 @@
   flex-wrap: wrap;
 }
 
+.admin__col-12 {
+  flex-basis: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .admin__col-4 {
   flex-basis: 40%;
+}
+.admin__col-5 {
+  flex-basis: 50%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .admin__item-sm {
@@ -49,13 +60,24 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
 }
 
+.admin__item-lg-12 {
+  width: 100%;
+  height: 535px;
+  overflow: hidden;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+}
+
+.admin__item-lg-12,
 .admin__item-lg:hover {
   overflow: scroll;
   overflow-x: hidden;
 }
 
+.admin__item-lg-12::-webkit-scrollbar,
 .admin__item-lg::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
 }
 
 .admin__item-lg::-webkit-scrollbar-track {
