add categories client

--- a/src/components/bar/brandbar/brandbar.css
+++ b/src/components/bar/brandbar/brandbar.css
@@ -24,7 +24,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   list-style: none;
   margin: auto 0;
 }
